--- a/instructions/templates/instructions/Intro.html
+++ b/instructions/templates/instructions/Intro.html
@@ -19,7 +19,7 @@
     <p>{% blocktrans %}Welcome!{% endblocktrans %}</p>
 
     <p>{% blocktrans %}In this survey,
-        you will participate in a simulation where you will be asked to make <b>financial decisions</b>.{% endblocktrans %}</p>
+        you will participate in a <b>simulation</b> where you will be asked to make <b>financial decisions</b>.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}Depending on your financial decisions,
         you can earn an <b>additional compensation</b> that ranges between EUR 10 and EUR 23 on average.
@@ -28,7 +28,7 @@
     <p>{% blocktrans %}To maximize your compensation, we first ask you to read the <b>instructions</b> carefully.
         Then, you will participate in a <b>trial</b> round.
         Then, before starting with the real simulation,
-        you will be asked to correctly answer a <b>quiz</b> on the simulation’s rules.{% endblocktrans %}</p>
+        you will be asked to correctly answer a <b>quiz</b> on the simulation's rules.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}Only participants <b>correctly</b> answering the quiz questions will be
         admitted to the real simulation and earn compensation.{% endblocktrans %}</p>
