--- a/quiz/templates/quiz/End_q1.html
+++ b/quiz/templates/quiz/End_q1.html
@@ -15,7 +15,7 @@
             Thus, we regret to inform that you are unable to participate in the simulation.{% endblocktrans %}
     </p>
 
-    <button class="otree-btn-next btn btn-primary">{% blocktrans %}Finish{% endblocktrans %}</button>
+    <button class="otree-btn-next btn btn-primary" onclick="NewTab()">{% blocktrans %}Finish{% endblocktrans %}</button>
 
     <br></br>
 
@@ -25,6 +25,12 @@
             <span class="sr-only">100% Complete</span>
         </div>
     </div>
+
+    <script>
+        function NewTab() {
+            window.open(js_vars.url, "_blank");
+        }
+    </script>
 
     <style>
         .otree-title {
