--- a/trial_borrow/templates/trial_borrow/Start.html
+++ b/trial_borrow/templates/trial_borrow/Start.html
@@ -21,7 +21,7 @@
     </p>
 
     <p>
-        {% blocktrans %}Use this round to explore all features of the game.
+        {% blocktrans %}Use this life to explore all features of the game.
         You can access the instructions clicking on the buttons at the bottom of the page.{% endblocktrans %}
     </p>
 
