--- a/instructions/templates/instructions/Instruct0.html
+++ b/instructions/templates/instructions/Instruct0.html
@@ -12,7 +12,7 @@
     </h3>
 
     <p>{% blocktrans %}In this game, you will make financial decisions during a simulated life.
-        Each life consists of 10 periods. You will have four lives.{% endblocktrans %}</p>
+        Each life consists of 10 periods. You will have 4 lives.{% endblocktrans %}</p>
 
     {% next_button %}
 
