Change translations in End questionnaire

--- a/post_survey/templates/post_survey/Risk_pref.html
+++ b/post_survey/templates/post_survey/Risk_pref.html
@@ -19,9 +19,9 @@
 
     <h3><br>{% blocktrans %}Task{% endblocktrans %} 1/2</h3>
 
-    <p>{% blocktrans %}Now, you can invest part of (or all) your rewards in a risky investment.
+    <p>{% blocktrans %}Now, you can invest part of (or all) your rewards in a risky asset.
         <br>
-        With the risky investment, in 1/3 of the cases you will gain 2.5 times the amount you invest,
+        With the risky asset, in 1/3 of the cases you will gain 2.5 times the amount you invest,
         in 2/3 of the cases you will lose the amount you invest.{% endblocktrans %}</p>
 
     <script src="{% static 'TweenMax.min.js' %}"></script>
@@ -86,8 +86,8 @@
 
     <p>{% blocktrans %}The amount you do not invest is not affected by the outcome of the risky asset.
         <br>
-        Use the slider to see your potential gain and loss with the risky asset
-        and decide what percentage of your rewards to invest in it.{% endblocktrans %}</p>
+        Use the slider to see your potential gain and loss with the risky asset and
+        decide what percentage of your rewards to invest in it.{% endblocktrans %}</p>
 
     <input type="hidden" name="risk_choice" value="" id="myRange"/>
     <input type="hidden" name="check_risk_choice" value="" id="id_check_risk_choice"/>
