Add vars total_payoff and total_time

--- a/result/templates/result/Result.html
+++ b/result/templates/result/Result.html
@@ -32,6 +32,7 @@
     <br>
 
     <input type="hidden" name="finished" value="" id="finished"/>
+    <input type="hidden" name="total_payoff" value="" id="payoff"/>
     <button class="otree-btn-next btn btn-primary" onclick="NewTab()">{% blocktrans %}Finish{% endblocktrans %}</button>
 
     <br></br>
@@ -47,6 +48,7 @@
         function NewTab() {
             window.open(js_vars.url, "_blank");
             document.getElementById('finished').value = '1';
+            document.getElementById('payoff').value = {{ total1|json }};
         }
     </script>
 
