--- a/result/templates/result/Result_nodelay.html
+++ b/result/templates/result/Result_nodelay.html
@@ -26,6 +26,7 @@
     <br>
 
     <input type="hidden" name="finished" value="" id="finished"/>
+    <input type="hidden" name="total_payoff" value="" id="payoff"/>
     <button class="otree-btn-next btn btn-primary" onclick="NewTab()">{% blocktrans %}Finish{% endblocktrans %}</button>
 
     <br></br>
@@ -41,6 +42,7 @@
         function NewTab() {
             window.open(js_vars.url, "_blank");
             document.getElementById('finished').value = '1';
+            document.getElementById('payoff').value = {{ total|json }};
         }
     </script>
 
