--- a/trial_save/templates/trial_save/End.html
+++ b/trial_save/templates/trial_save/End.html
@@ -15,6 +15,14 @@
         {% blocktrans %}Before you advance to the live round, you need to complete a quiz.{% endblocktrans %}
     </p>
 
+    <p><b>
+        {% blocktrans %}You will be removed from the game, and earn no compensation,
+            if you give two or more wrong answers.{% endblocktrans %}
+    </b></p>
+
+    <p>{% blocktrans %}If you need to read the instructions again,
+        you will find them at the bottom of the page with the test questions.{% endblocktrans %}</p>
+
     <br>
 
     {% next_button %}
